# eks-cluster-demo

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
ansible/: .gitignore  ansible.cfg  inventory.aws_ec2.yaml  requirements.yml
app/: Dockerfile
docs/: MIGRATION.md  blue-green-deployment.md  blue-green-quick-reference.md  deployment-strategy-comparison.md  kubernetes-deployment-guide.md  operations-runbook.md  terraform-to-manifests-migration.md
files/: requirements.txt  terraform.yml  test-terraform-eks.yml
kube/: Dockerfile  entrypoint.sh  generate-certs.sh  index.html  nginx.conf
manifests/: README.md  hello-world-deployment.yaml  hello-world-hpa.yaml  hello-world-networkpolicy.yaml  hello-world-service.yaml  kustomization.yaml
scripts/: ansible-ssm-ping.sh  auth_setup.sh  blue-green-switch.sh  cleanup-lb.sh  cleanup-prometheus.sh  cleanup-sg.sh  cleanup_lb.sh  cleanup_sg.sh  delete_services.sh  docker-image.sh  fetch-billing-total.py  fetch-billing-total.sh  fetch-ec2-instances.sh  fetch-ip.py  fetch-ssm-instances.sh  fwd-services.sh  get_my_ip.sh  image.sh  install-tools.sh  kube-config.sh  nuke-tf-bucket.py  nuke-tf-bucket.sh  oidc-provider-url.sh  pass_setup.sh  setup-kubeconfig.sh  setup-pass-eks.sh  setup-tfstate-bucket.py  setup-tfstate-bucket.sh  start-ec2-instances.sh  stop-ec2-instances.sh  update-kubeconfig.py  update-kubeconfig.sh  update-manifest-image.sh
terraform/: artifacts.tf  backend.tf  buckets.tf  cloudwatch.tf  deploy.tf  deploys.tf  deploys.tf.bak  eks.tf  helm.tf  iam.tf  keys.tf  local.tf  locals.tf  monitoring.tf  ssl.tf  (+13 more)
(+13 files in other folders)
