[tool.poetry]
name = "eks-cluster-demo"
version = "0.1.0"
description = "Python scripts for EKS cluster management"
authors = ["tester"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
boto3 = "==1.40.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
