[project]
name = "eks-cluster-demo"
version = "0.1.0"
description = "Python scripts for EKS cluster management"
authors = [{name = "devops"}]
requires-python = ">=3.12,<4.0"
# requires-python = "3.13.11"

dependencies = [
    "boto3 (>=1.40.25,<2.0.0)",
#    "pexpect (>=4.9.0,<5.0.0)",
    "ansible-core (>=2.20.2,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
